# embedded_dl_with_rust

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  wrapper.hpp
cmake/: FindTensorRT.cmake
libretinaface/: CMakeLists.txt
libretinaface/src/: engine.cpp  engine.hpp  logger.cpp  retinaface.cpp  retinaface.hpp
src/: lib.rs  main.rs
